tests/lean/synthorder.lean.expected.out
synthorder.lean:4:0-4:40: error: instance does not provide concrete values for (semi-)out-params
  Foo A (B × ?C)
synthorder.lean:7:0-7:38: error: cannot find synthesization order for instance @instFooNat with type
  {A : Type} → [inst : Foo A Nat] → Foo Nat A
all remaining arguments have metavariables:
  Foo ?A Nat
[Meta.synthOrder] synthesizing the arguments of @instFoo in the order [3, 4]:
      Foo A B
      Foo B C
[Meta.synthOrder] synthesizing the arguments of @instFoo_1 in the order [4, 3]:
      Foo A B
      Foo B C
[Meta.synthOrder] synthesizing the arguments of @instFooOption in the order []:
[Meta.synthOrder] synthesizing the arguments of @TwoHalf.toTwo in the order [2]:
      TwoHalf α
[Meta.synthOrder] synthesizing the arguments of @Four.toThree in the order [4]:
      Four α β
[Meta.synthOrder] synthesizing the arguments of @instFourOfThree in the order [4, 2, 3]:
      Three α β
      One β
      TwoHalf β
[Meta.synthOrder] synthesizing the arguments of @C1.toNonempty in the order [2, 1]:
      C1 α
      Inhabited α
[Meta.synthOrder] synthesizing the arguments of @C1.toNonempty' in the order [1, 3, 2]:
      DecidableEq α
      C1 α
      Inhabited α
[Meta.synthOrder] synthesizing the arguments of @instC1 in the order [1]:
      Inhabited α
instC1
[Meta.synthOrder] synthesizing the arguments of @C2.toNonempty' in the order [1, 3, 2]:
      DecidableEq α
      C1 α
      Inhabited α
[Meta.synthOrder] synthesizing the arguments of @instC1_1 in the order [1]:
      Inhabited α
C2.toNonempty'
